# tableverse

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-lite.yml  release.yml
.vscode_example/: sessions.json
crates/tv-adbc/: Cargo.toml
crates/tv-adbc/src/: clickhouse.rs  connection.rs  error.rs  lib.rs
crates/tv-bench/: Cargo.toml
crates/tv-bench/src/: main.rs
crates/tv-cli/: Cargo.toml
crates/tv-cli/src/: main.rs
crates/tv-core/: Cargo.toml
crates/tv-core/src/: error.rs  expr.rs  hash.rs  lib.rs  optimizer.rs  tile.rs  types.rs
crates/tv-engine/: Cargo.toml
crates/tv-engine/src/: admin_ops.rs  batch_stream.rs  bitmap_index.rs  bloom_index.rs  catalog.rs  dispatch.rs  error.rs  executor.rs  export_ops.rs  extensions.rs  external_sort.rs  filter_util.rs  index_catalog.rs  job_registry.rs  lib.rs  mark_index.rs  materializer.rs  profiles.rs  quantile_sketch.rs  query.rs  query_ops.rs  reader.rs  roaring_index.rs  sort_index.rs  source_ops.rs  sparse_sort_index.rs  spill.rs  spill_pipeline.rs  stats.rs  stats_ops.rs  streaming_agg.rs  temp.rs  test_helpers.rs  tile_ops.rs  top_k.rs
crates/tv-engine/src/compiler/: agg.rs  mod.rs  predicate.rs  scalar.rs  schema.rs
crates/tv-engine/src/export/: ansi_sql.rs  dbt.rs  mod.rs  python.rs  shell.rs  sql.rs
crates/tv-flight/: Cargo.toml
crates/tv-flight/src/: client.rs  descriptor.rs  error.rs  lib.rs  service.rs
crates/tv-integrations/: Cargo.toml
crates/tv-integrations/src/: delta.rs  error.rs  glue.rs  huggingface.rs  iceberg.rs  lib.rs
crates/tv-server/: Cargo.toml  build.rs
crates/tv-server/src/: assets.rs  cache.rs  error.rs  lib.rs  persistence.rs  state.rs
crates/tv-server/src/middleware/: auth.rs
crates/tv-server/src/routes/: catalog.rs  export.rs  health.rs  jobs.rs  metrics.rs  mod.rs  optimize.rs  profiles.rs  query.rs  search.rs  snapshot.rs  sources.rs  stats.rs  tiles.rs  upload.rs
crates/tv-server/src/snapshot/: mod.rs  store.rs
crates/tv-server/tests/: api_integration.rs
deployment/: docker-compose.yml
examples/data/: sheet2.parquet
memory/: MEMORY.md  lite_version.md  profiling_system_v2.md
py/: .gitignore  README.md  pyproject.toml
py/tableverse/: __init__.py  _cli.py  magic.py
sdk/python/: README.md  pyproject.toml
sdk/python/tableverse/: __init__.py  __main__.py  client.py  exceptions.py  render.py  serialize.py  server.py
sdk/python/tableverse/integrations/: airflow.py  dagster.py  dvc.py  great_expectations.py  mlflow.py  spark.py  wandb.py
web/: .eslintrc.json  Dockerfile  index-lite.html  index.html  nginx.conf  package.json  tsconfig.json  vite.lite.config.ts
web/dist-lite/: index-lite.html
web/dist-lite/assets/: index-lite-Dur1oq1i.js  index-lite-dL25fUBW.css
web/src/: App.tsx  AppLite.tsx  index.tsx  main-lite.tsx  styles.css
web/src/api/: contract.ts  http.ts  index.ts
web/src/api/duckdb/: adapter.ts  setup.ts  sql-builder.ts  stats.ts
web/src/components/CatalogBrowser/: index.tsx
web/src/components/CellContextMenu/: index.tsx
web/src/components/ColumnContextMenu/: index.tsx
web/src/components/ColumnDistributionPopover/: index.tsx
web/src/components/ColumnPanel/: index.tsx
web/src/components/CommandPalette/: index.tsx
web/src/components/EDA/: EDAPanel.tsx
web/src/components/ExportPanel/: index.tsx
web/src/components/FilterBuilder/: index.tsx
web/src/components/Minimap/: BookmarkPins.tsx  MinimapCanvas.tsx  index.tsx
web/src/components/Overlays/: BookmarkPanel.tsx  JumpToRow.tsx  KeyboardShortcutsPanel.tsx  LandmarkPanel.tsx  Tooltip.tsx
web/src/components/PipelineBar/: index.tsx
web/src/components/SourceManager/: AddSource.tsx  RecommendationBanner.tsx  SourceManagerLite.tsx  index.tsx
web/src/components/StatusBar/: index.tsx
web/src/components/TableViewer/: ColumnHeader.tsx  CornerCell.tsx  GridCanvas.tsx  HorizontalScrollbar.tsx  RowHeader.tsx  ScrollContainer.tsx  index.tsx
web/src/components/Toolbar/: LayerToggle.tsx  NavHistoryButtons.tsx  NavigationBar.tsx  SearchBar.tsx  ZoomControls.tsx
web/src/hooks/: useCorrelations.ts  useKeyboard.ts  useLandmarks.ts  useMinimap.ts  useNavigation.ts  useNavigationBar.ts  useProgressiveStats.ts  useRowCount.ts  useRowGroupStats.ts  useSemanticStats.ts  useSnapshotRestore.ts  useTiles.ts  useUrlState.ts  useViewport.ts  useVirtualSchema.ts  useZoom.ts
web/src/lib/: addPredicate.ts  api.ts  client-index.ts  color-scales.ts  commands.ts  format.ts  fuzzyMatch.ts  min-heap.ts  minimap-render.ts  prefetch-model.ts  profile-render.ts  quality-score.ts  semantic-render.ts  snapshot.ts  tile-cache.ts  tile-manager.ts  types.ts  urlState.ts  viewExpr.ts  viewHash.ts  viewport.ts  webgl-heatmap.ts
web/src/lib/layers/: class-balance.ts  completeness.ts  distribution.ts  index.ts  null-map.ts  outlier.ts  quality-alerts.ts
web/src/stores/: bookmarkStore.ts  landmarkStore.ts  perf.ts  stats.ts  table.ts  ui.ts  view.ts
