[package]
name = "tv-bench"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tv-bench"
path = "src/main.rs"

[dependencies]
tv-core = { path = "../tv-core" }
tv-engine = { path = "../tv-engine" }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
