[package]
name = "tv-flight"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tv-core = { path = "../tv-core" }
tv-engine = { path = "../tv-engine" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
arrow = { workspace = true }
arrow-flight = { version = "55", features = ["flight-sql-experimental"] }
tonic = { version = "0.12", features = ["transport"] }
futures = { workspace = true }
bytes = "1"
uuid = { workspace = true }
base64 = { workspace = true }
