[package]
name = "tv-integrations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tv-core = { path = "../tv-core" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = { workspace = true }
futures = { workspace = true }
