[package]
name = "tv-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tv-core = { path = "../tv-core" }
tv-engine = { path = "../tv-engine" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
rust-embed = { workspace = true }
futures = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
dashmap = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
bytes = "1"
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5", features = ["util"] }
arrow = { workspace = true }
parquet = { workspace = true }
